--- a/index.html
+++ b/index.html
@@ -11,16 +11,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
     </head>
     <title>Jogo da Professora Tânia</title>
-    <header>
-        <nav>
-            <p>Jogo da Professora Tânia</p>
-            <ul>
-                <li>ITEM DA LISTA</li>
-                <li>ITEM DA LISTA</li>
-            </ul>
-        </nav>
-    </header>
     <body>
+        <div id="elementos-a-serem-substituidos">
         <div class="titulo">
         <p>Jogo da Professora Tânia</p>
         </div>
@@ -32,7 +24,42 @@
         <audio id="EfeitoSonoroTecnológico">
             <source src="https://drive.google.com/uc?export=download&id=1qjM4GFnvrINFpibJhWEwbPuZI_p-DxWg" type="audio/mpeg">
           </audio>
-          <script>
+        
+             <div id="textopesquisa">
+                <p class="titulopesquisa">Sabe alguma resposta?</p>
+                    <p class="subtitulopesquisa">Coloque uma resposta abaixo para voltar ao nível que estava</p>
+                    </div>
+            <form action="" class="search-bar">
+                <input id="pesquisa" type="search" name="search" pattern=".*\S.*" required>
+                <button class="search-btn" type="submit">
+                    <span>Pesquisar</span>
+                </button>
+            </form>
+            <div id="botaopesquisar">
+            <button class="botaopesquisa" onclick="pesquisar()" onmouseover="playSound()" onmouseout="stopSound()">Pesquisar</button>   
+        </div>
+    </div>
+        </div>
+     </div>
+        <div id="elementos-substitutos" style="display:none;">
+            <div class="titulo">
+                <p>Nível 1</p>
+                </div>
+                <div class="subtitulo">
+                    <p>.--. .-. --- ..-. .. ... ... --- . ...</p>
+                    </div>
+                    <div class="resposta">
+                    <label for="resposta" class="textoresposta">Digite a Resposta:</label>
+                    <input type="text" id="resposta">
+                    <div id="botoesresposta">
+                    <button onclick="verificar()" onmouseover="playSound()" class="botaoresposta">Responder</button>
+                    <button onmouseover="playSound()" class="botaodica">Dica</button>
+                    </div>
+                    <img class="certoresposta" src="https://lh3.googleusercontent.com/u/2/drive-viewer/AFGJ81rLztpNL1xTbYtr7MjWFOJWTvtXH_Gc7ept3W1yt8buRf0h18ZS_O9t-nTEV8SYWkAH9D9LMpbEcUk-HdCJj_QGK33Uug=w917-h958"></img>
+                    <img class="erradoresposta" src="https://lh3.google.com/u/2/d/1zj2vl6fHs_8OrSIfbJUgfpdwI838m42A=w917-h942-iv1"></img>
+                </div>
+        </div>
+        <script>
             var audio = document.getElementById("EfeitoSonoroTecnológico");
             function playSound() {
             audio.play();
@@ -105,6 +132,95 @@
             menuButtonComoJogar.addEventListener('click', () => {
                 document.body.appendChild(menuComoJogar);
             });
+            document.addEventListener('DOMContentLoaded', function() {
+            const jogarButton = document.querySelector('#jogar');
+            const elementosASeremSubstituidos = document.querySelector('#elementos-a-serem-substituidos');
+            const elementosSubstitutos = document.querySelector('#elementos-substitutos');
+            console.log(elementosSubstitutos);
+            jogarButton.addEventListener('click', function() {
+                elementosASeremSubstituidos.classList.add('fade-out');
+                setTimeout(function() {
+                    elementosASeremSubstituidos.style.display = 'none';
+                    elementosSubstitutos.style.display = 'block';
+                }, 500); // aguarda 500ms para realizar a transição antes de mudar os elementos
+            });
+            });
+            function verificar() {
+                var resposta = document.getElementById("resposta").value;  
+                var certoresposta = document.querySelector(".certoresposta");
+                var erradoresposta = document.querySelector(".erradoresposta");
+                var botaoresposta = document.querySelector(".botaoresposta");
+                var input = document.getElementById("resposta");
+                input.disabled = true;
+                if (resposta === "profissoes") {
+                    certoresposta.style.opacity= "1";
+                    botaoresposta.style.opacity= "0";
+                    setTimeout(function() {
+                        certoresposta.style.opacity= "0";
+                        botaoresposta.style.opacity= "1";
+                        input.disabled = false;
+                    }, 5000); // 5000 milissegundos = 5 segundos
+                } else {
+                    erradoresposta.style.opacity= "1";
+                    botaoresposta.style.opacity= "0";
+                    setTimeout(function() {    
+                        erradoresposta.style.opacity= "0";
+                        botaoresposta.style.opacity= "1";
+                        input.disabled = false;
+                    }, 5000);
+                }
+            }
+
+            const botaoPesquisa = document.querySelector('.botaopesquisa');
+botaoPesquisa.addEventListener('click', function() {
+  var resposta = document.getElementById("pesquisa").value;
+  var elementosASeremSubstituidos = document.querySelector('#elementos-a-serem-substituidos');
+  var elementosSubstitutos = document.querySelector('#elementos-substitutos');
+  if (resposta === "profissoes") {
+    elementosASeremSubstituidos.classList.add('fade-out');
+    setTimeout(function() {
+        elementosASeremSubstituidos.style.display = 'none';
+        elementosSubstitutos.style.display = 'block';
+    }, 500);
+  } else {
+    // outra ação, caso não seja "profissoes"
+  }
+});
+
+            const menuDica = document.createElement('div');
+menuDica.classList.add('config-menu');
+menuDica.innerHTML = '<p>Configurações</p> <p id="textoconfig">Configurações</p> <p id="textoconfig">Configurações</p> <p id="textoconfig">Configurações</p> <p id="textoconfig">Configurações</p>';
+menuDica.style.position = "absolute";
+menuDica.style.top = "50%";
+menuDica.style.left = "0";
+menuDica.style.right = "0";
+menuDica.style.bottom = "0";
+menuDica.style.borderRadius = "75px";
+menuDica.style.width = "500px";
+menuDica.style.height = "600px";
+menuDica.style.backgroundColor = "rgba(11, 0, 61, 1)";
+menuDica.style.display = "flex";
+menuDica.style.flexDirection = "column";
+menuDica.style.justifyContent = "center";
+menuDica.style.alignItems = "center";
+menuDica.style.margin = "auto";
+menuDica.style.transform = "translateY(-50%)";
+menuDica.style.transition = "1s ease";
+const fecharBotao = document.createElement('button');
+fecharBotao.textContent = 'Fechar';
+fecharBotao.classList.add('botaodica');
+fecharBotao.onmouseover = () => { playSound(); };
+fecharBotao.onmouseout = () => { stopSound(); };
+fecharBotao.addEventListener('click', () => {
+  menuDica.remove();
+});
+menuDica.appendChild(fecharBotao);
+const menubotaodica = document.querySelector(".botaodica");
+if (menubotaodica) {
+  menubotaodica.addEventListener('click', () => {
+    document.body.appendChild(menuDica);
+  });
+}
             </script>
     </body>
     <footer>
