--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&display=swap" rel="stylesheet">
     </head>
-    <title>Jogo da Professora Tânia</title>
+    <title>Jogo da Professora Tânia - 9 Ano</title>
     <body id="body">
         <p class="pontostexto">Pontuação:ㅤ<span id="pontuacao" style="color: rgb(51, 51, 226);">0</span></p>
          
@@ -36,7 +36,7 @@
 
           <div id="comeco-de-jogo">
             <div class="titulo">
-                <p class="titulonivel">Jogo da Professora Tânia</p>
+                <p class="titulonivel">Jogo da Professora Tânia - 9 Ano</p>
                 </div>
                     <div class="botoes" style="margin-top: 100px;">
                     <button onmouseover="playSound()" onclick="playMusic()" class="botao botaocomecarjogo" style="opacity: 1; height: 75px; cursor: pointer;">Começar o Jogo</button>
@@ -45,7 +45,7 @@
 
         <div id="elementos-a-serem-substituidos" style="display: none;">
         <div class="titulo">
-        <p id="titulopagina">Jogo da Professora Tânia</p>
+        <p id="titulopagina">Jogo da Professora Tânia - 9 Ano</p>
         </div>
         <div class="botoes">
             <button id="jogar" class="botao" onmouseover="playSound()" onmouseout="stopSound()">Jogar</button>
